Switch to java 17 as trial java.buildpack support only java 17, prepare to be deployed on BTP with cloud profile